lab11: change from getFirst to get